--- a/new/views/index.jade
+++ b/new/views/index.jade
@@ -6,6 +6,6 @@ block content
 
   div(class="container-fluid mazecontainer")
     div(class="row")
-      div(class="col-xs-offset-3 col-xs-6")
+      div(class="col-xs-6")
         canvas(id="mazeCanvas", width="500", height="500")
 
